=== HEAD

* Allow QualifiedIdentifiers to be qualified, to allow :column.qualify(:table).qualify(:schema) (jeremyevans)

* Allow :db_type=>'mssql' option to be respected when using the DBI adapter (akitaonrails)

* Add schema_dumper extension, for dumping schema of tables (jeremyevans)

* Allow generic database types specified as ruby types to take options (jeremyevans)

* Change Dataset#exclude to invert given hash argument, not negate it (jeremyevans)

* Make Dataset#filter and related methods treat multiple arguments more intuitively (jeremyevans)

* Fix full text searching with multiple search terms on MySQL (jeremyevans)

* Fix altering a column name, type, default, or NULL/NOT NULL status on MySQL (jeremyevans)

* Fix index type syntax on MySQL (jeremyevans)

* Add temporary table support, via :temp option to Database#create_table (EppO, jeremyevans)

* Add Amalgalite adapter (jeremyevans)

* Remove Sequel::Metaprogramming#metaattr_accessor and metaattr_reader (jeremyevans)

* Remove Dataset#irregular_function_sql (jeremyevans)

* Add Dataset#full_text_sql to the MySQL adapter (dusty)

* Fix schema type parsing of decimal types on MySQL (jeremyevans)

* Make Dataset#quote_identifier work with SQL::Identifiers (jeremyevans)

* Remove methods and features deprecated in 2.12.0 (jeremyevans)

=== 2.12.0 (2009-04-03)

* Deprecate Java::JavaSQL::Timestamp#usec (jeremyevans)

* Fix Model.[] optimization introduced in 2.11.0 for databases that don't use LIMIT (jacaetevha)

* Don't use the model association plugin if SEQUEL_NO_ASSOCIATIONS constant or environment variable is defined (jeremyevans)

* Don't require core_sql if SEQUEL_NO_CORE_EXTENSIONS constant or environment variable is defined (jeremyevans)

* Add validation_helpers model plugin, which adds instance level validation support similar to previously standard validations, with a different API (jeremyevans)
